index.css
/* ... */
.text-end {
  text-align: end;
}
.title {
  font-size: 32pt;
}
.text-crt {
  animation: stereoText 1.6s infinite;
}

/* Body */
.body,
html {
  overflow-x: hidden;
  color: rgb(232, 232, 232);
  background: rgb(15, 15, 12);
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

/* Page Background */
#page-background {
  position: fixed;
  left: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  z-index: -10;
}

/* Navbar */
nav {
  /* position: sticky; */
  top: 0;
  width: 100%;
  height: auto;
  padding-top: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
nav div.nav-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 1rem 0 0 0;
  width: fit-content;
}
nav div.nav-links a {
  font-size: 12pt;
  padding: 0.7rem;
  height: fit-content;
  color: rgb(232, 232, 232);
  font-family: "tbf";
  text-decoration: none;
}
nav div.nav-links a.active {
  border-bottom: 0.3rem solid rgb(232, 232, 232);
  padding-bottom: 0.4rem !important;
}
nav #home-link {
  font-size: 22pt;
  font-family: "tbf";
  display: block;
  color: var(--color);
  padding: 0rem 5vw;
  text-decoration: none !important;
  cursor: pointer;
}
nav #home-link-sm {
  font-size: 22pt;
  font-family: "tbf";
  display: none;
  color: var(--color);
  padding-top: 1rem;
  text-decoration: none !important;
}
@media (max-width: 768px) {
  nav #home-link-sm {
    display: block;
  }
  nav #home-link {
    display: none;
  }
  nav div.nav-links {
    padding: 0;
  }
}

/* Main */
section.container {
  width: 100%;
  margin: 2rem auto;
  text-align: center;
}

@media (min-width: 576px) {
  section.container {
    max-width: 520px;
  }
}

@media (min-width: 768px) {
  section.container {
    max-width: 700px;
  }
}
@media (min-width: 992px) {
  section.container {
    max-width: 940px;
  }
}
@media (min-width: 1200px) {
  section.container {
    max-width: 1120px;
  }
}
@media (min-width: 1400px) {
  section.container {
    max-width: 1300px;
  }
}

/* Members */
div#member-selection {
  display: flex;
  flex-direction: row;
  align-items: center;
  max-width: fit-content;
  margin: auto;
}
div#member-selection a {
  margin: 0 5px;
}
div#member-selection img {
  aspect-ratio: 1;
  min-width: 62px;
  max-width: 96px;
  width: 5vw;
  border-radius: 50%;
  transition: 300ms ease;
}
div#member-selection a.active img {
  border-radius: 15%;
}
div#member-container {
  position: relative;
  min-width: calc(200px * (4 / 3));
  min-height: 200px;
  width: calc(70vh * (4 / 3));
  height: 70vh;
  padding: 2em;
  margin: 5px auto 15px auto;
  background: rgb(232, 232, 232);
  border-radius: 50% / 10%;
  color: rgb(15, 15, 12) !important;
  text-align: center;
  text-indent: 0.1em;
}
div#member-container:before {
  content: "";
  position: absolute;
  top: 8%;
  bottom: 8%;
  right: -4%;
  left: -4%;
  background: inherit;
  border-radius: 5% / 50%;
  z-index: -2;
}
div#member-notes {
  position: absolute;
  width: 20vw;
  aspect-ratio: 1;
  z-index: 5;
  margin-top: 48vh;
  right: calc(30vw - 20%);
}
div#member-notes-m {
  display: none;
}
div#member-notes img {
  width: 100%;
  position: absolute;
  z-index: 5;
}
div#member-notes ul#member-bullets {
  color: rgb(15, 15, 12);
  font-size: 1.7vw;
  font-family: "hand", cursive;
  padding: 2rem 3.2rem;
  position: absolute;
  list-style: none;
  z-index: 10;
  transform: rotate(-3.7deg);
}
div#member-transition {
  position: relative;
  min-width: calc(200 * (4 / 3));
  min-height: 200px;
  width: calc(70vh * (4 / 3));
  height: 70vh;
  padding: 2em;
  margin: 5px auto 15px auto;
  /* overflow: hidden; */
  border-radius: 50% / 10%;
  background-image: repeating-linear-gradient(white, black 5px);
  animation: tv-static 0.5s linear infinite;
  display: flex;
  justify-content: center;
  align-items: center;
}
.safari div#member-transition {
  background-image: url("./assets/background/channelstatic.mp4") !important;
  background-size: cover !important;
  animation: none !important;
}

/* (orientation: portrait) */
@media (max-width: 990px) {
  div#member-transition,
  div#member-container {
    min-width: 0 !important;
    min-height: 0 !important;
    width: calc(50vw * (4 / 3)) !important;
    height: 50vw !important;
  }
  h1#member-name-m,
  p#member-about-m,
  ul#member-bullets-m {
    display: inherit !important;
    width: fit-content;
    margin: 0 auto;
    color: rgb(232, 232, 232) !important;
  }
  h1#member-name-m {
    font-size: 18pt;
  }
  div#member-info,
  div#member-notes {
    display: none !important;
  }
  div#member-notes-m {
    display: inherit !important;
    position: inherit !important;
    width: 100vw;
    aspect-ratio: 1;
  }
  div#member-notes-m img {
    width: 80%;
    margin: 0 auto;
    z-index: 5;
  }
  div#member-notes-m ul#member-bullets-m {
    color: rgb(15, 15, 12);
    font-size: 5vw;
    font-family: "hand", cursive;
    padding: 2rem 3.2rem;
    position: absolute;
    list-style: none;
    z-index: 10;
    transform: rotate(-3.7deg);
  }
}
div#member-transition:before {
  content: "";
  position: absolute;
  top: 8%;
  bottom: 8%;
  right: -4%;
  left: -4%;
  /* overflow: hidden; */
  background: inherit;
  border-radius: 5% / 50%;
  z-index: -2;
}
/* div#member-transition video {
  position: absolute;
  width: 120%;
  height: 120%;
  z-index: -2;
} */
h1#transition-name {
  font-size: 42pt;
  font-style: italic;
  color: rgb(232, 232, 232);
  z-index: 2;
}
div#member-display {
  /* overflow: hidden; */
  clear: both;
  /* border: 2px solid red; */
  width: 100%;
  height: 100%;
  z-index: 3;

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  /* animation: flicker 0.15s infinite; */
}
/* ... */

